--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,4 @@
-# Use root/example user/password credentials
-version: '3.1'
+version: "3.1"
 
 services:
   php:
@@ -13,8 +12,11 @@ services:
 
   db:
     image: mysql
+    container_name: db
+    restart: unless-stopped
+    ports:
+      - 3306:3306
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
 
@@ -23,3 +25,4 @@ services:
     restart: always
     ports:
       - 8080:8080
+
