--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,50 @@
-version: "3.1"
-
+version: '3.1'
+   
 services:
   php:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 80:80
+      - 8084:80
     volumes:
       - ./src:/var/www/html/
-
+      
   db:
-    image: mysql
-    container_name: db
-    restart: unless-stopped
-    ports:
-      - 3306:3306
+    image: mysql:8.0.3
     command: --default-authentication-plugin=mysql_native_password
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
+      MYSQL_DATABASE: tododb
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
+      - 8081:8080
+
+
+# version: "3.1"
+
+# services:
+#   php:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     ports:
+#       - 80:80
+#     volumes:
+#       - ./src:/var/www/html/
+
+#   db:
+#     image: mysql
+#     container_name: db
+#     restart: unless-stopped
+#     ports:
+#       - 3306:3306
+#     command: --default-authentication-plugin=mysql_native_password
+#     environment:
+#       MYSQL_ROOT_PASSWORD: example
+
 
