--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,50 +1,36 @@
 version: '3.1'
-   
+
 services:
-  php:
+  php-apache-environment:
+    container_name: php-apache
     build:
-      context: .
+      context: ./php
       dockerfile: Dockerfile
-    ports:
-      - 8084:80
+    depends_on:
+      - db
     volumes:
-      - ./src:/var/www/html/
-      
+      - ./php/src:/var/www/html/
+    ports:
+      - 8000:80
+
   db:
-    image: mysql:8.0.3
-    command: --default-authentication-plugin=mysql_native_password
+    container_name: db
+    image: mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: tododb
+        MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
+        MYSQL_DATABASE: MY_DATABASE
+        MYSQL_USER: MYSQL_USER
+        MYSQL_PASSWORD: MYSQL_PASSWORD
+    ports:
+        - "9906:3306"
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8081:8080
+      - 8080:8080
 
-
-# version: "3.1"
-
-# services:
-#   php:
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     ports:
-#       - 80:80
-#     volumes:
-#       - ./src:/var/www/html/
-
-#   db:
-#     image: mysql
-#     container_name: db
-#     restart: unless-stopped
-#     ports:
-#       - 3306:3306
-#     command: --default-authentication-plugin=mysql_native_password
-#     environment:
-#       MYSQL_ROOT_PASSWORD: example
+  
 
 
